--- a/src/style.css
+++ b/src/style.css
@@ -6,15 +6,15 @@
   font-family: "Roboto Mono", monospace;
 }
 
- 
+
 .whiteView {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: auto;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  padding-bottom: 0;
+  margin-top: 0;
 }
 
 .archiveroicono {
@@ -26,7 +26,7 @@
 .blackView {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: auto;
   height: 100vh;
   background-color: black;
   color: white;
@@ -35,6 +35,18 @@
   padding-bottom: 0;
 }
 
+.arrow-first {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  padding-top: 10%;
+  right: 2%;
+  text-decoration: none;
+  color: black;
+  margin-bottom: 0;
+  align-items: flex-end;
+}
 
 .arrow,
 .arrowwhite {
@@ -42,10 +54,29 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  padding-top: 10%;
+  padding-top: 15%;
   right: 2%;
+  text-decoration: none;
+  color: black;
+  margin-bottom: 0;
+  align-items: flex-end;
 }
 
+.arrowwhite {
+  color: white;
+}
+
+.arrowwhite2 {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  padding-top: 5%;
+  right: 2%;
+  text-decoration: none;
+  color: white;
+  align-items: flex-end;
+}
 /* .arrow:before {
   content: "";
   display: block;
