--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap");
 
 * {
   margin: 0;
@@ -74,4 +74,4 @@
   text-decoration: none;
   color: white;
   align-items: flex-end;
-}
+} */
