--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -17,9 +17,15 @@
 }
 
 .logo {
-    width: 15rem;
-    height: 10rem;
-    padding: 0.25rem;
+    margin-top: -10rem;
+    width: 40rem;
+    height: 20rem;
+    padding: 2rem;
+}
+
+.welcome{
+    text-align: center;
+    font-size: 2rem;
 }
 
 .firstArrow {
@@ -234,9 +240,9 @@ a {
     }
 
     .logo {
-        width: 15rem;
+        width: 20rem;
         height: 10rem;
-        margin-bottom: 20rem;
+        margin-bottom: 10rem;
     }
 
     .welcome {
@@ -250,7 +256,7 @@ a {
 
     .firstArrow {
         position: absolute;
-        bottom: 14.5rem;
+        bottom: 4.5rem;
         font-size: 5rem;
         margin-left: 0.5rem;
         text-decoration: none;
@@ -384,11 +390,11 @@ a {
 
 
     .choiceText {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         font-weight: 900;
         text-align: center;
         color: white;
-        margin: 0 1rem;
+        margin: 0 3rem;
     }
 
     .btnChoice {
@@ -401,11 +407,11 @@ a {
         color: white;
         font-weight: 900;
         font-size: 1.5rem;
-        padding: 2rem;
+        padding: 2rem 1.1rem;
         border-style: solid;
         border-color: white;
         border-width: 4px;
-        margin: 1rem 0;
+        margin: 2rem 0.5rem;
     }
 
     .choiceCategorias {
