--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -1,17 +1,15 @@
-.containerVistaCategoria {
+ .containerVistaCategoria {
     width: auto;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-content: center;
-    margin: 0 35rem;
+    justify-content: space-between;
     padding: 1.25rem 0;
+    align-items: center;
 }
 
 .backArrow {
-    flex-direction: row-reverse;
-    margin: 0.25rem;
+    margin-left: 100rem;
     text-decoration: none;
     color: black;
 }
@@ -20,19 +18,19 @@
     display: flex;
     font-weight: 900;
     font-size: 2.25rem;
-    justify-content: center;
+    justify-content: center; 
 }
 
 .categorias{
-    display:flex ;
-    flex-direction: row;
-}
+    display: grid;
+    grid-template-rows: 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+} 
 
 .categoria{
     display: flex;
-    justify-content: center;
-    margin: 0.5rem 10rem;
-    padding: 0.25rem 0;
+    margin: 0.5rem 1rem;
+    padding: 0.25rem 1rem;
     border-color: black;
     border-width: 4px;
     border-style: solid;
@@ -40,6 +38,7 @@
     font-weight: 900;
     color: black;
     text-decoration: none;
+    justify-content: center;
 }
 
 @media screen and (max-width: 640px) {
