css últimas vistas

--- a/App.css
+++ b/App.css
@@ -3,3 +3,19 @@ html{
     font-family: Roboto Mono, monospace;
     font-weight: 200;
 }
+
+a:link {
+text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+}
+  
+  a:hover {
+    text-decoration: none;
+}
+  
+  a:active {
+    text-decoration: none;
+}
