--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -1,44 +1,55 @@
  .containerVistaCategoria {
     width: auto;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1.25rem 0;
+    display: grid;
     align-items: center;
+    grid-template-columns: 5% 90% 5%;
+    grid-template-rows: 5% 10% 80% 5%;
+    justify-items: center;
 }
 
 .backArrow {
-    margin-left: 100rem;
     text-decoration: none;
     color: black;
+    font-size: 2.5rem;
+    position: absolute;
+    grid-column: 3/4;
+    grid-row: 1/2;
 }
 
 .titleCategoria {
     display: flex;
     font-weight: 900;
-    font-size: 2.25rem;
+    font-size: 2.5rem;
     justify-content: center; 
-}
+    grid-column: 2/3;
+    grid-row: 2/3;}
 
 .categorias{
     display: grid;
+    grid-column: 2/3;
+    grid-row: 3/4;
     grid-template-rows: 2fr 2fr;
     grid-template-columns: 1fr 1fr 1fr;
 } 
 
-.categoria{
+.ctgr{
     display: flex;
     margin: 0.5rem 1rem;
-    padding: 0.25rem 1rem;
+    padding: 2rem 2.7rem;
     border-color: black;
-    border-width: 4px;
+    border-width: 7px;
     border-style: solid;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 900;
     color: black;
     text-decoration: none;
     justify-content: center;
+}
+
+.footer {
+    grid-column: 1/4;
+    grid-row: 4/5;
 }
 
 @media screen and (max-width: 640px) {
