--- a/src/routes/VistaParticipantes.css
+++ b/src/routes/VistaParticipantes.css
@@ -1,60 +1,100 @@
 .vistaParticipantes {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    width: auto;
+    height: 100vh;    
+    display: grid;
+    align-items: center;
+    grid-template-columns: 5% 90% 5%;
+    grid-template-rows: 5% 10% 80% 5%;
+    justify-items: center;
+    align-content: center;
 }
 
 .backArrow {
-    flex-direction: row-reverse;
     margin: 0.25rem;
     text-decoration: none;
     color: black;
+    font-size: 2rem;
+    margin-left: 75rem;
+    top: 1rem;
+    right: 1rem;
+    grid-column: 3/4;
+    grid-row: 1/2;
 }
 
-.title {
-    display: flex;
+.titleParticipantes {
     font-weight: 900;
+    text-align: center;
     font-size: 2.25rem;
-    justify-content: center;
     padding: 0.5rem 1rem;
     border-width: 4px;
     border-style: solid;
     border-color: black;
     margin: 0 35rem;
+    grid-column: 2/3;
+    grid-row: 2/3; 
 }
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(7, minmax (0, 1fr));
+.participantes {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0 2rem;
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+.footer{
+    grid-column: 1/4;
+    grid-row: 4/5;
 }
 
 @media screen and (max-width: 640px) {
     .vistaParticipantes {
-        display: flex;
-        flex-direction: column;
+        display: grid;
         align-items: center;
+        grid-template-areas: 
+        "arrow"
+        "title"
+        "participantes"
+        "footer";
+        grid-template-columns: 1fr;
     }
-
+    
     .backArrow {
-        flex-direction: row-reverse;
         margin: 0.25rem;
         text-decoration: none;
         color: black;
+        font-size: 2rem;
+        margin-left: 75rem;
+        grid-area: arrow;
+        top: 1rem;
+        right: 1rem;
     }
-
-    .title {
+    
+    .titleParticipantes {
         display: flex;
         font-weight: 900;
-        font-size: 1.5rem;
+        font-size: 2.25rem;
         justify-content: center;
         padding: 0.5rem 1rem;
         border-width: 4px;
         border-style: solid;
         border-color: black;
+        margin: 0 35rem;
+        grid-area: title;
     }
-
-    .container {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+    
+    .participantes {
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin: 0 5rem;
+        grid-area: participantes;
     }
 }
