--- a/src/routes/VistaPersona.css
+++ b/src/routes/VistaPersona.css
@@ -1,61 +1,181 @@
 .personaContainer{
     width: auto;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 33% 34% 33%;
+    grid-template-rows: 5% 5% 75% 5%;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
 }
 
-.persona{
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: 100vh;
-    justify-content: center;
-    align-content: center;
-    margin: 0 1.25rem;
-}
 .backArrow{
-    flex-direction: row-reverse;
-    margin: 0.25rem;
     text-decoration: none;
     color: black;
+    font-size: 2rem;
+    grid-column: 3/4;
+    grid-row: 1/2;
 }
 
-.quote{
+.cuña{
     text-align: center;
-    margin: 0.5rem;
+    font-size: 1rem;
+    margin: 0 15rem;
+    grid-row: 2/3;
+    grid-column: 1/4;
 }
 
-.title{
-    color: black;
-    text-align: center;
-    font-size: 1.5rem;
+.categoriasIzq{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.infoPersona{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-column: 2/3;
+    grid-row: 3/4;}
+
+.nombrePersona{
+    /* display: flex; */
+    font-weight: 900;
+    font-size: 2.25rem;
+    justify-content: center;
+    padding: 0.5rem 1rem;
+    border-width: 4px;
     border-style: solid;
     border-color: black;
-    border-width: 4px;
-    margin: 1.25rem 3rem;
+    margin: 0 35rem;
+    text-transform: uppercase;
 }
 
 .imgPersona{
     border-style: solid;
     border-color: black;
     border-width: 4px;
+    height: 25rem;
+    width: 25rem;
+    padding: 0.5rem;
 }
-
-.categorias{
-    display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+.categoriasDer{
+    grid-column: 3/4;
+    grid-row: 3/4;
 }
-
 .categoria{
     display: flex;
     justify-content: center;
-    margin: 0.5rem;
-    padding: 0.25rem 0;
+    margin: 3.5rem 0;
+    padding: 1rem 0;
     border-style: solid;
     border-color: black;
-    border-width: 4px;
-    font-size: 1.5rem;
+    border-width: 8px;
+    font-size: 2rem;
     font-weight: 900;
+    width: 20rem;
+}
+
+.footer{
+    grid-column: 1/4;
+    grid-row: 4/5;
+}
+
+.categoria:visited{
+    color: black;
 }
 
 @media screen and (max-width: 640px) {
+    .personaContainer{
+        width: auto;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        /* grid-template-columns: 2fr 3fr 2fr;
+        grid-template-rows: 1fr 3fr 1fr;
+        gap: 2rem; */
+    }
+    
+    .persona{
+        /* display: flex;
+        flex-direction: column; */
+        width: auto;
+        height: 100vh;
+        justify-content: center;
+        align-content: center;
+        margin: 0 1.25rem;
+        /* grid-template-areas: 
+            "arrow"
+            "cuña"
+            "participante"
+            "categorias"
+            "footer"; */
+    }
+    .backArrow{
+        margin: 0.25rem;
+        text-decoration: none;
+        color: black;
+        font-size: 2rem;
+        margin-left: 75rem;
+        top: 1rem;
+        right: 1rem;
+    }
+    
+    .cuña{
+        text-align: center;
+        margin: 0.5rem;
+    }
+    
+    .infoPersona{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        grid-area: participante;
+    }
+    .nombrePersona{
+        font-weight: 900;
+        font-size: 2.25rem;
+        justify-content: center;
+        padding: 0.5rem 1rem;
+        border-width: 4px;
+        border-style: solid;
+        border-color: black;
+        margin: 0 35rem;
+        text-transform: uppercase;
+        grid-area: participante;
+    }
+    
+    .imgPersona{
+        border-style: solid;
+        border-color: black;
+        border-width: 4px;
+        height: 30rem;
+        width: 30rem;
+        padding: 1rem;
+        grid-area: participante;
+    }
+
+    .categoriasIzq{
+        display: grid;
+        grid-row: 1fr 1fr 1fr;
+        grid-area: categoria;
+    }
+    .categoriasDer{
+        display: grid;
+        grid-row: 1fr 1fr 1fr;
+        grid-area: categoria;
+    }
+    .categoria{
+        display: flex;
+        justify-content: center;
+        margin: 0.5rem;
+        padding: 0.25rem 0;
+        border-style: solid;
+        border-color: black;
+        border-width: 4px;
+        font-size: 1.5rem;
+        font-weight: 900;
+        width: 20rem;
+    } 
 }
