--- a/src/components/ListaParticipantes.css
+++ b/src/components/ListaParticipantes.css
@@ -1,6 +1,5 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(7, minmax (0, 1fr));
 }
 
 .participante{
@@ -12,4 +11,17 @@ width: 10rem;
 height: 10rem;
 }
 @media screen and (max-width: 640px) {
+    .container {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+    
+    .participante{
+    border-width: 4px;
+    border-style: solid;
+    border-color: black;
+    margin: 0.5rem;
+    width: 7rem;
+    height: 7rem;
+    }
 }
