--- a/src/routes/VistaPersona.css
+++ b/src/routes/VistaPersona.css
@@ -89,41 +89,33 @@
     .personaContainer{
         width: auto;
         height: 100vh;
-        display: flex;
-        flex-direction: column;
-        /* grid-template-columns: 2fr 3fr 2fr;
-        grid-template-rows: 1fr 3fr 1fr;
-        gap: 2rem; */
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 5% 30% 10% 50% 5%;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
     }
     
-    .persona{
-        /* display: flex;
-        flex-direction: column; */
-        width: auto;
-        height: 100vh;
-        justify-content: center;
-        align-content: center;
-        margin: 0 1.25rem;
-        /* grid-template-areas: 
-            "arrow"
-            "cuña"
-            "participante"
-            "categorias"
-            "footer"; */
-    }
     .backArrow{
-        margin: 0.25rem;
         text-decoration: none;
         color: black;
         font-size: 2rem;
-        margin-left: 75rem;
-        top: 1rem;
-        right: 1rem;
+        grid-column: 2/3;
+        grid-row: 1/2;
     }
     
     .cuña{
         text-align: center;
-        margin: 0.5rem;
+        font-size: 0.7rem;
+        margin: 2rem;
+        grid-row: 3/4;
+        grid-column: 1/3;
+    }
+    
+    .categoriasIzq{
+        grid-column: 1/2;
+        grid-row: 4/5;
     }
     
     .infoPersona{
@@ -131,9 +123,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        grid-area: participante;
-    }
+        grid-column: 1/3;
+        grid-row: 2/3;}
+    
     .nombrePersona{
+        /* display: flex; */
         font-weight: 900;
         font-size: 2.25rem;
         justify-content: center;
@@ -141,41 +135,42 @@
         border-width: 4px;
         border-style: solid;
         border-color: black;
-        margin: 0 35rem;
         text-transform: uppercase;
-        grid-area: participante;
+        margin: 0;
     }
     
     .imgPersona{
         border-style: solid;
         border-color: black;
         border-width: 4px;
-        height: 30rem;
-        width: 30rem;
-        padding: 1rem;
-        grid-area: participante;
+        height: 10rem;
+        width: 10rem;
+        padding: 0.5rem;
     }
 
-    .categoriasIzq{
-        display: grid;
-        grid-row: 1fr 1fr 1fr;
-        grid-area: categoria;
-    }
     .categoriasDer{
-        display: grid;
-        grid-row: 1fr 1fr 1fr;
-        grid-area: categoria;
+        grid-column: 2/3;
+        grid-row: 4/5;
     }
     .categoria{
         display: flex;
         justify-content: center;
-        margin: 0.5rem;
-        padding: 0.25rem 0;
+        margin: 2rem;
+        padding: 0.5rem 0.1rem;
         border-style: solid;
         border-color: black;
-        border-width: 4px;
-        font-size: 1.5rem;
+        border-width: 8px;
+        font-size: 1.3rem;
         font-weight: 900;
-        width: 20rem;
-    } 
-}
+        width: 10rem;
+    }
+    
+    .footer{
+        grid-column: 1/3;
+        grid-row: 5/6;
+    }
+    
+    .categoria:visited{
+        color: black;
+    }
+}    
