--- a/src/routes/VistaParticipantes.css
+++ b/src/routes/VistaParticipantes.css
@@ -1,60 +1,124 @@
 .vistaParticipantes {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .backArrow {
+  flex-direction: row-reverse;
+  margin: 0.25rem;
+  text-decoration: none;
+  color: black;
+}
+
+.title {
+  display: flex;
+  font-weight: 900;
+  font-size: 2.25rem;
+  justify-content: center;
+  padding: 0.5rem 1rem;
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+  margin: 0 35rem;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(7, minmax (0, 1fr));
+}
+
+@media screen and (max-width: 640px) {
+  .vistaParticipantes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .backArrow {
     flex-direction: row-reverse;
     margin: 0.25rem;
     text-decoration: none;
     color: black;
-}
+  }
 
-.title {
+  .title {
     display: flex;
     font-weight: 900;
-    font-size: 2.25rem;
+    font-size: 1.5rem;
     justify-content: center;
     padding: 0.5rem 1rem;
     border-width: 4px;
     border-style: solid;
     border-color: black;
-    margin: 0 35rem;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(7, minmax (0, 1fr));
+////// propiedades vista persona
+
+.personaContainer {
+  width: auto;
+  height: 100vh;
+}
+
+.persona {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  margin: 0 1.25rem;
+}
+.backArrow {
+  flex-direction: row-reverse;
+  margin: 0.25rem;
+  text-decoration: none;
+  color: black;
+}
+
+.quote {
+  text-align: center;
+  margin: 0.5rem;
+}
+
+.title {
+  color: black;
+  text-align: center;
+  font-size: 1.5rem;
+  border-style: solid;
+  border-color: black;
+  border-width: 4px;
+  margin: 1.25rem 3rem;
+}
+
+.imgPersona {
+  border-style: solid;
+  border-color: black;
+  border-width: 4px;
+}
+
+.categorias {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.categoria {
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem;
+  padding: 0.25rem 0;
+  border-style: solid;
+  border-color: black;
+  border-width: 4px;
+  font-size: 1.5rem;
+  font-weight: 900;
 }
 
 @media screen and (max-width: 640px) {
-    .vistaParticipantes {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .backArrow {
-        flex-direction: row-reverse;
-        margin: 0.25rem;
-        text-decoration: none;
-        color: black;
-    }
-
-    .title {
-        display: flex;
-        font-weight: 900;
-        font-size: 1.5rem;
-        justify-content: center;
-        padding: 0.5rem 1rem;
-        border-width: 4px;
-        border-style: solid;
-        border-color: black;
-    }
-
-    .container {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
 }
