--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -134,6 +134,14 @@
     margin: 1rem 0 2rem 5rem;
 }
 
+.logoNegro{
+    height: 10rem;
+}
+
+.titleInstrucciones {
+    font-size: 2.5rem;
+}
+
 .instructions {
     width: auto;
     height: 100vh;
