--- a/App.css
+++ b/App.css
@@ -1,21 +1,25 @@
-html{
-    margin: 0;
-    font-family: Roboto Mono, monospace;
-    font-weight: 200;
+html {
+  margin: 0;
+  font-family: Roboto Mono, monospace;
+  font-weight: 200;
 }
 
 a:link {
-text-decoration: none;
-  }
-  
-  a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
-  
-  a:hover {
-    text-decoration: none;
+
+a:visited {
+  text-decoration: none;
 }
-  
-  a:active {
-    text-decoration: none;
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+.root {
+  height: 100%;
+  width: auto;
 }
