--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,17 +1,16 @@
 .footer{
-width: 100vw;
-height: auto;
+width: 100%;
+height: 5%;
 background-color: black;
-display: flex;
-flex-direction: row;
-position: static;
+position: absolute;
+display:flex;
 justify-content: space-around;
 font-size: 0.75rem;
 text-decoration: none;
 color: white;
 line-height: 2rem;
-grid-area: footer;
-bottom: 1rem;
+/* grid-area: footer;
+bottom: 1rem; */
 }
 
 .link{
