--- a/src/components/ListaParticipantes.css
+++ b/src/components/ListaParticipantes.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: grid;
 }
 
@@ -24,4 +24,4 @@ margin: 0.2rem;
     width: 7rem;
     height: 7rem;
     }
-}
+} */
