--- a/src/routes/VistaParticipantes.css
+++ b/src/routes/VistaParticipantes.css
@@ -1,7 +1,15 @@
+.container{
+  height: 100vh;
+  width: auto;
+}
 .containerVistaParticipantes {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+height: 95vh;
+  width: auto;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+  flex:1;
 }
 
 .backArrow {
@@ -11,7 +19,7 @@
   color: black;
 }
 
-.title {
+.titleParticipantes{
   display: flex;
   font-weight: 900;
   font-size: 2.25rem;
@@ -22,9 +30,34 @@
   border-color: black;
   margin: 0 35rem;
 }
+.participantesContainer{
+  height:75vh;
+  width: auto;
+  display: grid;
+  justify-content: space-around;
+  align-content: space-evenly;
+  column-gap: 5%;
+  grid-template-columns: auto auto auto auto auto auto auto;
+  grid-template-rows: 80px 80px;
+  
+  padding: 10px;
+}
+.participante{
 
+  height:auto;
+  width: auto;
+  gap: 10px;
+  
+}
+.participanteImg{
+  height:150px;
+  width: 150px;
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+}
 @media screen and (max-width: 640px) {
-  .vistaParticipantes {
+  .containerVistaParticipantes {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,7 +70,7 @@
     color: black;
   }
 
-  .title {
+  .titleParticipantes {
     display: flex;
     font-weight: 900;
     font-size: 1.5rem;
@@ -50,92 +83,179 @@
 
 ////// propiedades vista persona
 
-.personaContainer {
+.personaContainer{
   width: auto;
   height: 100vh;
+  display: grid;
+  grid-template-columns: 33% 34% 33%;
+  grid-template-rows: 5% 5% 75% 5%;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
 }
 
-.persona {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  height: 100vh;
-  justify-content: center;
-  align-content: center;
-  margin: 0 1.25rem;
-}
-.backArrow {
-  flex-direction: row-reverse;
-  margin: 0.25rem;
+.backArrow{
   text-decoration: none;
   color: black;
+  font-size: 2rem;
+  grid-column: 3/4;
+  grid-row: 1/2;
 }
 
-.quote {
+.cuña{
   text-align: center;
-  margin: 0.5rem;
+  font-size: 1rem;
+  margin: 0 15rem;
+  grid-row: 2/3;
+  grid-column: 1/4;
 }
 
-.title {
-  color: black;
-  text-align: center;
-  font-size: 1.5rem;
+.categoriasIzq{
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+
+.infoPersona{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  grid-column: 2/3;
+  grid-row: 3/4;}
+
+.nombrePersona{
+  /* display: flex; */
+  font-weight: 900;
+  font-size: 2.25rem;
+  justify-content: center;
+  padding: 0.5rem 1rem;
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+  margin: 0 35rem;
+  text-transform: uppercase;
+}
+
+.imgPersona{
   border-style: solid;
   border-color: black;
   border-width: 4px;
-  margin: 1.25rem 3rem;
+  height: 25rem;
+  width: 25rem;
+  padding: 0.5rem;
 }
-
-.imgPersona {
-  border-style: solid;
-  border-color: black;
-  border-width: 4px;
+.categoriasDer{
+  grid-column: 3/4;
+  grid-row: 3/4;
 }
-
-.categorias {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.categoria {
+.categoria{
   display: flex;
   justify-content: center;
-  margin: 0.5rem;
-  padding: 0.25rem 0;
+  margin: 3.5rem 0;
+  padding: 1rem 0;
   border-style: solid;
   border-color: black;
-  border-width: 4px;
-  font-size: 1.5rem;
+  border-width: 8px;
+  font-size: 2rem;
   font-weight: 900;
+  width: 20rem;
+}
+
+.footer{
+  grid-column: 1/4;
+  grid-row: 4/5;
+}
+
+.categoria:visited{
+  color: black;
 }
 
 @media screen and (max-width: 640px) {
-}
-
-.container {
-  display: grid;
-}
-
-.participante {
-  border-width: 4px;
-  border-style: solid;
-  border-color: black;
-  width: 10rem;
-  height: 10rem;
-  margin: 0.2rem;
-}
-@media screen and (max-width: 640px) {
-  .container {
-    display: grid;
-    grid-template-columns: 50% 50%;
+  .personaContainer{
+      width: auto;
+      height: 100vh;
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 5% 30% 10% 50% 5%;
+      align-items: center;
+      justify-items: center;
+      align-content: center;
+  }
+  
+  .backArrow{
+      text-decoration: none;
+      color: black;
+      font-size: 2rem;
+      grid-column: 2/3;
+      grid-row: 1/2;
+  }
+  
+  .cuña{
+      text-align: center;
+      font-size: 0.7rem;
+      margin: 2rem;
+      grid-row: 3/4;
+      grid-column: 1/3;
+  }
+  
+  .categoriasIzq{
+      grid-column: 1/2;
+      grid-row: 4/5;
+  }
+  
+  .infoPersona{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      grid-column: 1/3;
+      grid-row: 2/3;}
+  
+  .nombrePersona{
+      /* display: flex; */
+      font-weight: 900;
+      font-size: 2.25rem;
+      justify-content: center;
+      padding: 0.5rem 1rem;
+      border-width: 4px;
+      border-style: solid;
+      border-color: black;
+      text-transform: uppercase;
+      margin: 0;
+  }
+  
+  .imgPersona{
+      border-style: solid;
+      border-color: black;
+      border-width: 4px;
+      height: 10rem;
+      width: 10rem;
+      padding: 0.5rem;
   }
 
-  .participante {
-    border-width: 4px;
-    border-style: solid;
-    border-color: black;
-    margin: 0.5rem;
-    width: 7rem;
-    height: 7rem;
+  .categoriasDer{
+      grid-column: 2/3;
+      grid-row: 4/5;
   }
-}
+  .categoria{
+      display: flex;
+      justify-content: center;
+      margin: 2rem;
+      padding: 0.5rem 0.1rem;
+      border-style: solid;
+      border-color: black;
+      border-width: 8px;
+      font-size: 1.3rem;
+      font-weight: 900;
+      width: 10rem;
+  }
+  
+  .footer{
+      grid-column: 1/3;
+      grid-row: 5/6;
+  }
+  
+  .categoria:visited{
+      color: black;
+  }
+}    
