--- a/src/routes/Creditos.css
+++ b/src/routes/Creditos.css
@@ -9,3 +9,10 @@
     text-align: center;
     padding: 1rem;
 }
+
+.textCreditos{
+    color: white;
+    text-align: center;
+    font-size: 1rem;
+    padding: 3rem 5rem;
+}
