--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -36,7 +36,6 @@ bottom: 1rem; */
     border-radius: 5px;
     background: none;
     cursor: pointer;
-    -webkit-appearance: none;
 
   }
 
@@ -61,4 +60,4 @@ bottom: 1rem; */
 @media screen and (max-width: 640px){
   .footer{
 font-size: x-small;
-  }
+  }}
