--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,15 +2,14 @@
 width: 100%;
 height: 5%;
 background-color: black;
-position: absolute;
+position: relative;
 display:flex;
 justify-content: space-around;
 font-size: 0.75rem;
 text-decoration: none;
 color: white;
 line-height: 2rem;
-/* grid-area: footer;
-bottom: 1rem; */
+
 }
 
 .link{
