--- a/src/components/ModalActoSentido.css
+++ b/src/components/ModalActoSentido.css
@@ -4,7 +4,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, .7);
+    right: 0;
+    bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
