--- a/src/routes/ActoSentido.css
+++ b/src/routes/ActoSentido.css
@@ -1,6 +1,6 @@
-.vistaActoSentido{
+.vistaActoSentido {
   width: auto;
-  height: 100vh;    
+  height: 100vh;
   display: grid;
   align-items: center;
   grid-template-columns: 5% 90% 5%;
@@ -8,15 +8,31 @@
   justify-items: center;
   align-content: center;
 }
+.title{
+  display: flex;
+  font-weight: 900;
+  font-size: 2.5rem;
+  justify-content: center;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
 .gifParticipantes {
   display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: 0 2rem;
-    grid-column: 2/3;
-    grid-row: 3/4;
-  }
-  
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 2rem;
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.personCategoria {
+  background-color: none;
+  background-color: white;
+  border: none;
+  padding: 7%;
+  width: 5rem;
+  height: 5rem;
+}
