--- a/src/routes/ActoSentido.css
+++ b/src/routes/ActoSentido.css
@@ -1,3 +1,10 @@
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .vistaActoSentido {
   width: auto;
   height: 100vh;
