--- a/src/routes/ContainerCategoria.css
+++ b/src/routes/ContainerCategoria.css
@@ -1,3 +1,10 @@
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
 .vista {
     width: auto;
     height: 100vh;
