--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -146,11 +146,11 @@
     cursor: default;
 }
 
-.logoNegro {
-    height: 10rem;
+.blackLogo {
+    height: 25%;
 }
 
-.titleInstrucciones {
+.instructionsTitle {
     font-size: 2.5rem;
     cursor: default;
 }
@@ -173,14 +173,13 @@
     cursor: default;
 }
 
-.viaje {
+.btnInstructions {
     border-style: solid;
     border-color: black;
     border-width: 4px;
     color: black;
     padding: 1rem 2rem 1rem 2rem;
     text-decoration: none;
-
 }
 
 .choice {
@@ -237,10 +236,12 @@
 .boldItalic {
     font-style: italic;
 }
-span{
+
+span {
     font-weight: 900;
 
 }
+
 a {
     text-decoration: none;
 }
@@ -289,7 +290,7 @@ a {
         height: 100vh;
         justify-content: center;
         align-items: center;
-        margin-top: 0;
+        gap: 1%;
     }
 
     .secondText,
@@ -303,17 +304,21 @@ a {
     }
 
     .arrow {
-        font-size: 3rem;
+        font-size: 2.5rem;
         text-decoration: none;
         color: black;
-        margin-bottom: 0;
+        position: relative;
+        padding: 0;
+        right: 0;
     }
 
     .arrowWhite {
-        font-size: 3rem;
+        font-size: 2.5rem;
         text-decoration: none;
         color: white;
-        margin-bottom: 0;
+        padding: 0;
+        right: 0;
+        position: relative;
     }
 
     .arrowSixth {
@@ -323,10 +328,7 @@ a {
         padding-top: 2rem;
         text-decoration: none;
         color: white;
-        margin-bottom: 0;
         align-items: flex-end;
-        margin-left: 16rem;
-
     }
 
     .fourth {
@@ -339,7 +341,7 @@ a {
         justify-content: center;
         align-items: center;
         font-size: 1rem;
-        padding-bottom: 0;
+        gap: 1%;
     }
 
     .sixth {
@@ -360,6 +362,7 @@ a {
         text-align: justify;
         margin-top: 1rem;
         padding: 0;
+        word-spacing: 0.1rem;
     }
 
     .person {
@@ -367,6 +370,7 @@ a {
         font-size: 0.7rem;
         font-weight: 900;
         margin: 0.5rem 0;
+        word-spacing: 0.2rem;
     }
 
     .instructions {
@@ -376,23 +380,40 @@ a {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 2%;
+        margin: 0 15%;
+    }
+
+    .blackLogo {
+        width: 100%;
+    }
+
+    .instructionsTitle {
+        font-size: 2.2rem;
+        cursor: default;
+        width: 100%;
+        text-align: center;
     }
 
     .instructionsText {
         font-weight: 100;
         font-size: 1rem;
         text-align: justify;
-        margin: 1rem 3rem;
-        padding: 0;
+        margin: 0 10%;
+        padding: 0 1%;
+        word-spacing: -0.5rem;
+        line-height: 1.5;
     }
 
-    .viaje {
+    .btnInstructions {
         border-style: solid;
         border-color: black;
         border-width: 4px;
         color: black;
         text-decoration: none;
-        padding: 0.5rem 1.3rem;
+        padding: 1rem 2.1rem;
+        font-size: 1.2rem;
+        text-align: center;
     }
 
     .choice {
@@ -403,15 +424,15 @@ a {
         justify-content: center;
         align-items: center;
         background-color: black;
+        gap: 2%;
+        padding: 0 15%;
     }
-
 
     .choiceText {
         font-size: 1.3rem;
         font-weight: 900;
         text-align: center;
         color: white;
-        margin: 0 3rem;
     }
 
     .btnChoice {
@@ -424,11 +445,11 @@ a {
         color: white;
         font-weight: 900;
         font-size: 1.5rem;
-        padding: 2rem 1.1rem;
+        padding: 2rem;
         border-style: solid;
         border-color: white;
         border-width: 4px;
-        margin: 2rem 0.5rem;
+        margin-bottom: 3%;
     }
 
     .choiceCategorias {
