--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -1,3 +1,10 @@
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
 .containerVistaCategoria {
     width: auto;
     height: 100vh;
@@ -12,7 +19,7 @@
     text-decoration: none;
     color: black;
     font-size: 2.5rem;
-    position: absolute;
+    position: relative;
     grid-column: 3/4;
     grid-row: 1/2;
 }
