--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -17,8 +17,7 @@
 }
 
 .logo {
-    width: 50%;
-    height: 50%;
+    height: 40%;
     cursor: default;
 }
 
@@ -26,11 +25,13 @@
     text-align: center;
     font-size: 3rem;
     cursor: default;
+    margin: 0 3%;
 }
 
 .subWelcome {
     font-size: 1.12rem;
     cursor: default;
+    margin: 0 4%;
 }
 
 .firstArrow {
