--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -13,6 +13,8 @@
     grid-template-columns: 5% 90% 5%;
     grid-template-rows: 5% 10% 80% 5%;
     justify-items: center;
+    align-content: space-evenly;
+
 }
 
 .backArrow {
@@ -25,10 +27,8 @@
 }
 
 .titleCategoria {
-    display: flex;
     font-weight: 900;
     font-size: 2.5rem;
-    justify-content: center;
     grid-column: 2/3;
     grid-row: 2/3;
     cursor: default;
@@ -40,6 +40,7 @@
     grid-row: 3/4;
     grid-template-rows: 2fr 2fr;
     grid-template-columns: 1fr 1fr 1fr;
+    position: absolute;
 }
 
 .ctgr{
