--- a/src/components/ModalActoSentido.css
+++ b/src/components/ModalActoSentido.css
@@ -1,15 +1,12 @@
 .overlay {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 40px;
 }
 
 .contenedorModal {
