--- a/src/routes/VistaParticipantes.css
+++ b/src/routes/VistaParticipantes.css
@@ -11,7 +11,6 @@
   display: grid;
   align-items: center;
   justify-items: center;
-  align-content: center;
   align-content: space-evenly;
   grid-template-columns: 5% 90% 5%;
   grid-template-rows: 10% 15% 70% 5%;
@@ -41,11 +40,11 @@
 }
 
 .participantesContainer {
+  width: 10vw;
   grid-row: 3/4;
   grid-column: 2/3;
   display: grid;
   justify-content: space-around;
-  align-content: space-evenly;
   align-content: center;
   grid-template-rows: 50% 50%;
   grid-template-columns: auto auto auto auto auto auto auto;
@@ -53,9 +52,10 @@
   gap: 3%;
 }
 
-.partipante{
+.partipante {
   cursor: pointer;
 }
+
 .participanteImg {
   width: 150px;
   border-width: 4px;
@@ -83,6 +83,8 @@
   grid-row: 1/2;
   margin-left: 70%;
   font-size: 2rem;
+  background-color: white;
+  border: none;
 }
 
 .cuña {
@@ -162,6 +164,28 @@
   grid-row: 3/4;
 }
 
+.containerModal {
+  width: 60vw;
+  height: 60vh;
+  background: white;
+  border-width: 5px;
+  border-style: solid;
+  margin: auto;
+  display: grid;
+  grid-template-rows: 20% 80%;
+  grid-template-columns: 20% 60% 20%;
+  padding: 2% 0;
+  align-items: center;
+}
+
+.backArrowModal {
+  border: none;
+  background-color: rgba(0, 0, 0, 0.0);
+  grid-column: 3;
+  grid-row: 1/2;
+  font-size: 2rem;
+}
+
 .footer {
   position: relative;
 }
@@ -169,15 +193,29 @@
 @media screen and (max-width: 640px) {
   .containerVistaParticipantes {
     display: grid;
-    grid-template-columns: 5% 90% 5%;
+    grid-template-columns: 10% 80% 10%;
     grid-template-rows: 5% 10% 80% 5%;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .personaContainer {
+    width: auto;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 5% 30% 10% 50% 5%;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
   }
 
   .backArrow {
-    flex-direction: row-reverse;
-    margin: 0.25rem;
     text-decoration: none;
     color: black;
+    font-size: 2rem;
+    grid-column: 3/4;
+    grid-row: 1/2;
   }
 
   .titleParticipantes {
@@ -195,21 +233,27 @@
 
   .participantesContainer {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: auto auto auto;
     position: absolute;
     align-items: center;
     justify-items: center;
     align-content: center;
     grid-column: 2/3;
     grid-row: 4/5;
+    height: 25%;
+    width: auto;
   }
 
-  .backArrow {
-    text-decoration: none;
+  .bckArrow {
     color: black;
-    font-size: 2rem;
+    position: relative;
     grid-column: 3/4;
     grid-row: 1/2;
+    font-size: 2rem;
+  }
+
+  .participante {
+    height: 100%;
   }
 
   .participanteImg {
@@ -218,15 +262,17 @@
 
   .cuña {
     text-align: center;
-    font-size: 1rem;
-    margin: 0 15rem;
-    grid-row: 2/3;
-    grid-column: 1/4;
+    font-size: 0.7rem;
+    margin: 0;
+    grid-row: 3/4;
+    grid-column: 2/3;
   }
 
   .categoriasIzq {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 2/3;
+    grid-row: 4/5;
+    display: flex;
+    margin: 0;
   }
 
   .infoPersona {
@@ -261,8 +307,10 @@
   }
 
   .categoriasDer {
-    grid-column: 3/4;
-    grid-row: 3/4;
+    grid-column: 2/3;
+    grid-row: 4/5;
+    display: flex;
+    margin: 0;
   }
 
   .categoria {
@@ -286,95 +334,4 @@
   .categoria:visited {
     color: black;
   }
-
-  @media screen and (max-width: 640px) {
-    .personaContainer {
-      width: auto;
-      height: 100vh;
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-template-rows: 5% 30% 10% 50% 5%;
-      align-items: center;
-      justify-items: center;
-      align-content: center;
-    }
-
-    .backArrow {
-      text-decoration: none;
-      color: black;
-      font-size: 2rem;
-      grid-column: 2/3;
-      grid-row: 1/2;
-    }
-
-    .cuña {
-      text-align: center;
-      font-size: 0.7rem;
-      margin: 2rem;
-      grid-row: 3/4;
-      grid-column: 1/3;
-    }
-
-    .categoriasIzq {
-      grid-column: 1/2;
-      grid-row: 4/5;
-    }
-
-    .infoPersona {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      grid-column: 1/3;
-      grid-row: 2/3;
-    }
-
-    .nombrePersona {
-      /* display: flex; */
-      font-weight: 900;
-      font-size: 2.25rem;
-      justify-content: center;
-      padding: 0.5rem 1rem;
-      border-width: 4px;
-      border-style: solid;
-      border-color: black;
-      text-transform: uppercase;
-      margin: 0;
-    }
-
-    .imgPersona {
-      border-style: solid;
-      border-color: black;
-      border-width: 4px;
-      height: 10rem;
-      width: 10rem;
-      padding: 0.5rem;
-    }
-
-    .categoriasDer {
-      grid-column: 2/3;
-      grid-row: 4/5;
-    }
-
-    .categoria {
-      display: flex;
-      justify-content: center;
-      margin: 2rem;
-      padding: 0.5rem 0.1rem;
-      border-style: solid;
-      border-color: black;
-      border-width: 8px;
-      font-size: 1.3rem;
-      font-weight: 900;
-      width: 10rem;
-    }
-
-    .footer {
-      grid-column: 1/3;
-      grid-row: 5/6;
-    }
-
-    .categoria:visited {
-      color: black;
-    }
-  }
+}
