--- a/src/routes/ContainerCategoria.css
+++ b/src/routes/ContainerCategoria.css
@@ -41,9 +41,8 @@
 }
 
 .personCategoria:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-
+    transform: translateY(-5px);
+    background-color: transparent;
 }
 
 .imgParticipantes {
@@ -131,6 +130,12 @@
     position: relative;
     left: 48%;
     cursor: pointer;
+}
+
+.close:hover{
+    transition: all .1s ease;
+    transform: translateX(-10px);
+    background-color: transparent;
 }
 
 .video {
