--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -48,6 +48,11 @@
     align-items: flex-end;
 }
 
+.firstArrow:hover {
+    transition: all .1s ease;
+    transform: translateX(-10px);
+}
+
 .second,
 .third,
 .fifth {
@@ -80,6 +85,11 @@
     align-items: flex-end;
 }
 
+.arrow:hover{
+    transition: all .1s ease;
+    transform: translateX(-10px);
+}
+
 .arrowWhite {
     display: flex;
     font-size: 3rem;
@@ -92,6 +102,11 @@
     align-items: flex-end;
 }
 
+.arrowWhite:hover{
+    transition: all .1s ease;
+    transform: translateX(-10px);
+}
+
 .arrowSixth {
     display: flex;
     font-size: 3rem;
@@ -102,6 +117,11 @@
     color: white;
     margin-bottom: 0;
     align-items: flex-end;
+}
+
+.arrowSixth:hover{
+    transition: all .1s ease;
+    transform: translateX(-10px);
 }
 
 .fourth {
@@ -130,6 +150,7 @@
     padding: 0 20%;
     gap: 1%;
 }
+
 
 .quote {
     font-size: 1rem;
@@ -176,7 +197,7 @@
     cursor: default;
 }
 
-.two{
+.two {
     margin-top: 1%;
 }
 
@@ -187,6 +208,11 @@
     color: black;
     padding: 1rem 2rem 1rem 2rem;
     text-decoration: none;
+}
+
+.btnInstructions:hover{
+    transform: translateY(-5px);
+background-color: transparent;
 }
 
 .choice {
@@ -215,6 +241,7 @@
 
 }
 
+
 .choiceParticipantes {
     color: white;
     font-weight: 900;
@@ -237,7 +264,11 @@
     border-width: 4px;
     margin: 1%;
     text-decoration: none;
+}
 
+.choiceCategorias:hover, .choiceParticipantes:hover{
+    transform: translateY(-5px);
+background-color: transparent;
 }
 
 .boldItalic {
@@ -271,21 +302,25 @@ a {
     }
 
     .welcome {
-        font-weight: 800;
-        font-size: 1.5rem;
-        text-align: left;
-        margin: 10% 5% 0 50%;
+        text-align: center;
+        margin: 0;
+        font-size: 1.3rem;
     }
 
     .subWelcome {
-        margin: 0 5% 0 50%;
+        margin: 0 10%;
+        font-size: 1rem;
+        font-weight: 100;
+        text-align: center;
+
     }
 
     .firstArrow {
-        position: absolute;
-        font-size: 3rem;
-        margin-left: 30%;
         color: black;
+        position: relative;
+        padding: 0;
+        right: 0;
+        top: 10%
     }
 
     .second,
@@ -317,6 +352,8 @@ a {
         position: relative;
         padding: 0;
         right: 0;
+        top: 50%;
+
     }
 
     .arrowWhite {
@@ -326,16 +363,21 @@ a {
         padding: 0;
         right: 0;
         position: relative;
+        top: 30%;
     }
 
     .arrowSixth {
         display: flex;
         font-size: 3rem;
-        position: absolute;
-        padding-top: 2rem;
+        position: relative;
+        right: 0;
+        padding: 0;
+        margin: 15% 0 0 0;
         text-decoration: none;
         color: white;
         align-items: flex-end;
+        justify-content: center;
+
     }
 
     .fourth {
@@ -362,6 +404,11 @@ a {
         text-align: left;
         padding: 0 2.5rem;
     }
+    .quotes{
+        display: flex;
+        flex-direction: column ;
+    }
+    
 
     .quote {
         font-size: 1rem;
@@ -392,7 +439,9 @@ a {
     }
 
     .blackLogo {
-        width: 100%;
+        height: 150px;
+        margin-bottom: 20%;
+
     }
 
     .instructionsTitle {
@@ -404,12 +453,16 @@ a {
 
     .instructionsText {
         font-weight: 100;
-        font-size: 1rem;
+        font-size: 0.8rem;
         text-align: justify;
-        margin: 0 10%;
+        margin: 0 1%;
         padding: 0 1%;
-        word-spacing: -0.5rem;
+        word-spacing: -0.3rem;
         line-height: 1.5;
+    }
+
+    .two {
+        margin-top: 5%;
     }
 
     .btnInstructions {
@@ -421,6 +474,7 @@ a {
         padding: 1rem 2.1rem;
         font-size: 1.2rem;
         text-align: center;
+        margin-top: 5%;
     }
 
     .choice {
