--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -9,7 +9,7 @@
   text-decoration: none;
   color: white;
   line-height: 2rem;
-  grid-template-columns: 15% 55% 10% 5% 15%;
+  grid-template-columns: 15% 45% 20% 20%;
 }
 
 .formaNavegacion {
@@ -18,10 +18,11 @@
 
 .toRetribucion {
   grid-column: 3/4;
+  position: absolute;
 }
 
 .toCreditos {
-  grid-column: 4/5;
+  grid-column: 3/4;
 }
 
 .formaNavegacion,
@@ -33,21 +34,29 @@
 }
 
 .audioPlayer {
-  /* position: relative;
-  width: 90%;
-  max-width: 500px;
-  height: 80px; */
+  display: flex;
+  flex-direction: row;
+  grid-column: 4/5;
 }
 
-.btnPlay {
-  position: absolute;
+.btn {
+  background-color: transparent;
   border: none;
-  background: transparent;
-  color: white;
-  margin: 0;
-  color
 }
 
+.btnMusic path {
+  stroke: white;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  border: 30%;
+  color: white;
+  /* background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(154,154,154,1) 52%, rgba(2,0,36,1) 100%); */
+}
+
+.volume {
+  color: white;
+}
 
 
 @media screen and (max-width: 640px) {
