--- a/src/routes/ActoSentido.css
+++ b/src/routes/ActoSentido.css
@@ -15,7 +15,8 @@
   justify-items: center;
   align-content: center;
 }
-.title{
+
+.title {
   display: flex;
   font-weight: 900;
   font-size: 2.5rem;
@@ -27,14 +28,18 @@
   border-style: solid;
   padding: 1% 5%;
 }
+
 .gifParticipantes {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto;
+  grid-template-rows: 50% 50%;
   align-content: center;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
   margin: 0 2rem;
+  gap: 5% 2%;
   grid-column: 2/3;
   grid-row: 3/4;
 }
@@ -54,10 +59,11 @@
   cursor: default;
 }
 
-.informationName, .informationData{
+.informationName,
+.informationData {
   font-size: 0.8rem;
 }
 
-.informationData{
+.informationData {
   font-weight: 100;
 }
