--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -258,6 +258,10 @@ background-color: transparent;
     text-decoration: none;
 }
 
+.btnText:link, .btnText:visited {
+    color: black;
+}
+
 .choiceCategorias:hover, .choiceParticipantes:hover{
     transform: translateY(-5px);
 background-color: transparent;
