--- a/src/routes/ActoSentido.css
+++ b/src/routes/ActoSentido.css
@@ -10,23 +10,24 @@
   height: 100vh;
   display: grid;
   align-items: center;
-  grid-template-columns: 5% 90% 5%;
-  grid-template-rows: 5% 10% 80% 5%;
+  grid-template-columns: 100%;
+  grid-template-rows: 10% 90% ;
   justify-items: center;
   align-content: center;
 }
 
 .title {
-  display: flex;
   font-weight: 900;
   font-size: 2.5rem;
   justify-content: center;
-  grid-column: 2/3;
+  grid-column: 1/2;
   grid-row: 2/3;
   cursor: default;
   border-width: 5px;
   border-style: solid;
   padding: 1% 5%;
+  position: absolute;
+  top: 10%;
 }
 
 .gifParticipantes {
@@ -35,22 +36,35 @@
   grid-template-rows: 50% 50%;
   align-content: center;
   justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin: 0 2rem;
   gap: 5% 2%;
-  grid-column: 2/3;
-  grid-row: 3/4;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  width: 100vw;
 }
 
 .personCategoria {
-  background-color: none;
-  background-color: white;
+  background-color: transparent;
   border: none;
-  padding: 7%;
-  width: 5rem;
-  height: 5rem;
+  width: 150px;
+}
+
+.gifParticipanteStatic {
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+  width: 150px;
+  position: absolute;
+}
+
+.gifParticipanteStatic:hover {
+  opacity: 0;
+}
+
+.gifParticipanteActive {
+  border-width: 4px;
+  border-style: solid;
+  border-color: black;
+  width: 150px;
 }
 
 .data {
