--- a/src/routes/ContainerCategoria.css
+++ b/src/routes/ContainerCategoria.css
@@ -10,23 +10,20 @@
     height: 100vh;
     display: grid;
     align-items: center;
-    grid-template-columns: 5% 90% 5%;
-    grid-template-rows: 5% 10% 80% 5%;
+    grid-template-columns: 100%;
+    grid-template-rows: 10% 90%;
     justify-items: center;
     align-content: center;
 }
 
-.title {
-    display: flex;
-    font-weight: 900;
-    font-size: 2.5rem;
-    justify-content: center;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    cursor: default;
-    border-width: 5px;
-    border-style: solid;
-    padding: 1% 5%;
+.backArrow {
+    justify-self: end;
+    align-self: end;
+    grid-area: 1 / 1 / 2 / 2;
+    text-decoration: none;
+    color: black;
+    position: relative;
+    background-color: transparent;
 }
 
 .personCategoria {
@@ -49,11 +46,10 @@
     grid-template-columns: auto auto auto auto auto auto auto;
     grid-template-rows: 50% 50%;
     gap: 5% 2%;
-    grid-column: 2/3;
-    grid-row: 3/4;
+    grid-column: 1/2;
+    grid-row: 2/3;
     margin: 0;
     justify-content: center;
-
 }
 
 .loadingContainer {
