--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -10,8 +10,8 @@
     height: 100vh;
     display: grid;
     align-items: center;
-    grid-template-columns: 5% 90% 5%;
-    grid-template-rows: 5% 90% 5%;
+    grid-template-columns: 100%;
+    grid-template-rows: 5% 90%;
     justify-items: center;
     align-content: space-evenly;
 
@@ -20,9 +20,9 @@
 .backArrow {
     text-decoration: none;
     color: black;
-    font-size: 2.5rem;
+    font-size: 2rem;
     position: relative;
-    grid-column: 3/4;
+    margin: 5% 3% 0 0;
     grid-row: 1/2;
     border: none;
 }
@@ -30,7 +30,6 @@
 .titleCategoria {
     font-weight: 900;
     font-size: 2.5rem;
-    grid-column: 2/3;
     grid-row: 2/3;
     cursor: default;
     bottom: 30%;
@@ -42,7 +41,6 @@
 
 .categorias {
     display: grid;
-    grid-column: 2/3;
     grid-row: 2/3;
     grid-template-rows: 2fr 2fr;
     grid-template-columns: 1fr 1fr 1fr;
