--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,9 +8,10 @@
   text-decoration: none;
   color: white;
   line-height: 2rem;
-  grid-template-columns: 10% 15% auto 10% 5% 11%;
+  grid-template-columns: 0.7fr 1fr 4fr 1fr 0.5fr 1fr;
   max-height: 10%;
   padding: 0 1%;
+  gap: 0;
 }
 
 .backHome {
@@ -19,17 +20,18 @@
 
 .formaNavegacion {
   grid-column: 2/3;
+  justify-content: left;
 }
 
 .toRetribucion {
   grid-column: 4/5;
-  justify-content: left;
+  justify-content: right;
 
 }
 
 .toCreditos {
   grid-column: 5/6;
-  justify-content: left;
+  justify-content: center;
 
 }
 
@@ -47,9 +49,10 @@
   flex-direction: row;
   grid-column: 6/7;
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   align-content: center;
 }
+
 
 .btn {
   background-color: transparent;
@@ -59,17 +62,48 @@
 .btnMusic path {
   stroke: white;
 }
-
-input[type="range"] {
-  height: 1rem;
-  color: white;
-  /* background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(154,154,154,1) 52%, rgba(2,0,36,1) 100%); */
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+  border-radius: 5px;
+  height: 0.5rem;
 }
 
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-thumb {
+  border: 2px solid #000000;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  background: white;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
 
 
 @media screen and (max-width: 640px) {
   .footer {
     font-size: x-small;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    width: 100vw;
+    height: 5%;
+    position: absolute;
+    bottom: 0;
+  }
+
+  .toRetribucion{
+    grid-row: 3/4;
+  }
+
+  .toCreditos {
+    grid-row: 4/5;
+  }
+
+  .audioPlayer{
+    display: none;
   }
 }
