--- a/src/routes/ContainerCategoria.css
+++ b/src/routes/ContainerCategoria.css
@@ -92,12 +92,15 @@
     background: white;
     border-width: 5px;
     border-style: solid;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: grid;
     grid-template-rows: 20% 80%;
     grid-template-columns: 10% 80% 10%;
     padding: 1% 0;
     align-items: center;
+    position: absolute;
 }
 
 .data {
@@ -134,7 +137,7 @@
 
 .video {
     width: 90%;
-    margin: auto;
+    margin: auto 0;
     grid-column: 2/3;
     grid-row: 2/3;
     background-color: black;
