--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -38,10 +38,9 @@
 .firstArrow {
     font-size: 3rem;
     position: absolute;
-    padding-top: 38%;
-    right: 2%;
+    right: 2%; 
+    bottom: 2%;
     color: black;
-    margin-bottom: 0;
 }
 
 .firstArrow:hover {
@@ -73,7 +72,7 @@
     font-size: 3rem;
     position: absolute;
     padding-top: 16%;
-    right: 2%;
+    right: 2%; 
     text-decoration: none;
     color: black;
     margin-bottom: 0;
