--- a/src/routes/VistaCategorias.css
+++ b/src/routes/VistaCategorias.css
@@ -1,9 +1,9 @@
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
-  }
+}
 
 .containerVistaCategoria {
     width: auto;
@@ -48,7 +48,7 @@
     top: 40%;
 }
 
-.ctgr{
+.ctgr {
     display: flex;
     margin: 0.5rem 1rem;
     padding: 2rem 2.7rem;
@@ -61,50 +61,68 @@
     text-decoration: none;
     justify-content: center;
 }
-.ctgr:hover{
+
+.ctgr:hover {
     transform: translateY(-5px);
     background-color: transparent;
 }
+
 .footer {
     grid-column: 1/4;
     grid-row: 4/5;
 }
 
 @media screen and (max-width: 640px) {
+    .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
     .containerVistaCategoria {
-        width: auto;
-        height: 100vh;
+        width: 100%;
+        height: 90vh;
         display: grid;
+        grid-template-rows: 5% 95%;
+        grid-template-columns: 100%;
         align-items: center;
         justify-items: center;
     }
 
     .backArrow {
+        justify-self: end;
+        grid-area: 1 / 1 / 2 / 2;
         text-decoration: none;
         color: black;
-        font-size: 2.5rem;
-        position: absolute;
-        grid-column: 3/4;
-        grid-row: 1/2;
+        position: relative;
+        background-color: transparent;
     }
 
     .titleCategoria {
-        display: flex;
         font-weight: 900;
         font-size: 2.5rem;
         justify-content: center;
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 2/3;
+        position: absolute;
+        top: 5%;
+        border-width: 7px;
+        padding: 0.5rem 2.5rem;
     }
 
     .categorias {
         display: flex;
         flex-direction: column;
+        position: absolute;
+        top: 15%;
     }
 
     .ctgr {
         display: flex;
-        margin: 0.5rem 1rem;
+        margin: 0.5rem 0;
         padding: 1rem 2.7rem;
         border-color: black;
         border-width: 7px;
@@ -116,8 +134,5 @@
         justify-content: center;
     }
 
-    .footer {
-        grid-column: 1/4;
-        grid-row: 4/5;
-    }
+    .footer {}
 }
